--- a/src/app/pages/state/state.component.html
+++ b/src/app/pages/state/state.component.html
@@ -65,9 +65,9 @@
         <div class="grid grid-cols-1 md:grid-cols-12 gap-6">
             <div class="md:col-span-12 flex flex-col gap-2">
                 <p-message size="large" severity="error">
-                    <h4>Estimado beneficiario, contactese con nosotros desde el <b class="ml-1"> 30 de junio al 09 de julio de 2025</b>,
-                        de Lunes a Viernes en el horario de atención, 08:00 a 16:30
-                    </h4>
+<!--                    <h4>Estimado beneficiario, contactese con nosotros desde el <b class="ml-1"> 30 de junio al 09 de julio de 2025</b>,-->
+<!--                        de Lunes a Viernes en el horario de atención, 08:00 a 16:30-->
+<!--                    </h4>-->
                 </p-message>
             </div>
         </div>
@@ -81,10 +81,10 @@
                 <div class="md:w-40 relative">
                     <div class="sticky-note">
                         <p>Curso en línea
-                            <p-button label="Repotar Inconvenientes"
-                                      [icon]="PrimeIcons.INFO_CIRCLE"
-                                      [raised]="true"
-                                      (onClick)="filterPhones('curso')"></p-button>
+<!--                            <p-button label="Repotar Inconvenientes"-->
+<!--                                      [icon]="PrimeIcons.INFO_CIRCLE"-->
+<!--                                      [raised]="true"-->
+<!--                                      (onClick)="filterPhones('curso')"></p-button>-->
                         </p>
                     </div>
 
@@ -113,10 +113,10 @@
                     <div class="md:w-40 relative">
                         <div class="sticky-note">
                             <p>Preservación Abril
-                                <p-button label="Repotar Inconvenientes"
-                                          [icon]="PrimeIcons.INFO_CIRCLE"
-                                          [raised]="true"
-                                          (onClick)="filterPhones('preservacion_abril')" />
+<!--                                <p-button label="Repotar Inconvenientes"-->
+<!--                                          [icon]="PrimeIcons.INFO_CIRCLE"-->
+<!--                                          [raised]="true"-->
+<!--                                          (onClick)="filterPhones('preservacion_abril')" />-->
                             </p>
                         </div>
 
@@ -143,10 +143,10 @@
                     <div class="md:w-40 relative">
                         <div class="sticky-note">
                             <p>Preservación Mayo
-                                <p-button label="Repotar Inconvenientes"
-                                          [icon]="PrimeIcons.INFO_CIRCLE"
-                                          [raised]="true"
-                                          (onClick)="filterPhones('preservacion_mayo')" />
+<!--                                <p-button label="Repotar Inconvenientes"-->
+<!--                                          [icon]="PrimeIcons.INFO_CIRCLE"-->
+<!--                                          [raised]="true"-->
+<!--                                          (onClick)="filterPhones('preservacion_mayo')" />-->
                             </p>
                         </div>
 
@@ -176,10 +176,10 @@
                     <div class="md:w-40 relative">
                         <div class="sticky-note">
                             <p>Gasolineras Abril
-                                <p-button label="Repotar Inconvenientes"
-                                          [icon]="PrimeIcons.INFO_CIRCLE"
-                                          [raised]="true"
-                                          (onClick)="filterPhones('levantamiento_abril')" />
+<!--                                <p-button label="Repotar Inconvenientes"-->
+<!--                                          [icon]="PrimeIcons.INFO_CIRCLE"-->
+<!--                                          [raised]="true"-->
+<!--                                          (onClick)="filterPhones('levantamiento_abril')" />-->
                             </p>
                         </div>
 
@@ -208,10 +208,10 @@
                         <div class="sticky-note">
 
                             <p>Encuestas Turísticas Mayo
-                                <p-button label="Repotar Inconvenientes"
-                                          [icon]="PrimeIcons.INFO_CIRCLE"
-                                          [raised]="true"
-                                          (onClick)="filterPhones('levantamiento_mayo')" />
+<!--                                <p-button label="Repotar Inconvenientes"-->
+<!--                                          [icon]="PrimeIcons.INFO_CIRCLE"-->
+<!--                                          [raised]="true"-->
+<!--                                          (onClick)="filterPhones('levantamiento_mayo')" />-->
                             </p>
                         </div>
 
