--- a/src/app/pages/state/state.component.html
+++ b/src/app/pages/state/state.component.html
@@ -47,17 +47,17 @@
                 {{ _authService.additionalInformation.numeroCuenta }}
             </div>
 
-            <!--            <div class="md:col-span-5 flex flex-col gap-2">-->
-            <!--                <p-message severity="info" size="large">-->
-            <!--                    <span class="ml-2 mr-2">-->
-            <!--                                <b>Informativo:</b> si su cuenta bancaria no es correcta dirigirse al siguiente enlace-->
-            <!--                            </span>-->
+                        <div class="md:col-span-5 flex flex-col gap-2">
+                            <p-message severity="info" size="large">
+                                <span class="ml-2 mr-2">
+                                            <b>Informativo:</b> si su cuenta bancaria no es correcta dirigirse al siguiente enlace
+                                        </span>
 
-            <!--                    <p-button (onClick)="linkToEEA()" [outlined]="true" severity="warn">-->
-            <!--                        Actualización Ecuatorianos en Acción-->
-            <!--                    </p-button>-->
-            <!--                </p-message>-->
-            <!--            </div>-->
+                                <p-button (onClick)="linkToEEA()" [outlined]="true" severity="warn">
+                                    Actualización Ecuatorianos en Acción
+                                </p-button>
+                            </p-message>
+                        </div>
         </div>
     </div>
 
