--- a/src/app/pages/internal-state/internal-state.component.html
+++ b/src/app/pages/internal-state/internal-state.component.html
@@ -20,20 +20,18 @@
                         </div>
                     </ng-template>
                 </p-autocomplete>
-
             </div>
 
-            <div class="md:col-span-1 flex flex-col gap-2">
-
-            </div>
 
             @if (userState?.transactionalCode) {
                 <div class="md:col-span-2 flex flex-col gap-2">
-                    <h6>Código de verificación:</h6>
-                    <p-tag (click)="findStatesByCedula(identification.value.cedula)"
-                           [icon]="PrimeIcons.SYNC"
-                           severity="info">{{ userState.transactionalCode }}
-                    </p-tag>
+                    <label>Código de verificación:</label>
+                    <p-button (click)="findStatesByCedula(identification.value.cedula)"
+                              [icon]="PrimeIcons.SYNC"
+                              [label]="userState.transactionalCode"
+                              pTooltip="Refrescar"
+                              severity="info">
+                    </p-button>
                 </div>
             }
         </div>
