--- a/src/app/pages/state/state.component.html
+++ b/src/app/pages/state/state.component.html
@@ -282,11 +282,11 @@
         <h4>{{ filteredPhones?.label }}</h4>
     </ng-template>
 
-    <p style="font-size: 16px">
-        Para ser atendido por favor mencionar el siguiente código
-    </p>
+<!--    <p style="font-size: 16px">-->
+<!--        Para ser atendido por favor mencionar el siguiente código-->
+<!--    </p>-->
 
-    <p>Código de verificación: <b>{{ transactionalCode }}</b></p>
+<!--    <p>Código de verificación: <b>{{ transactionalCode }}</b></p>-->
 
     @for (phone of filteredPhones?.phones; track phone) {
         <p-inputgroup>
