--- a/src/app/pages/state/state.component.html
+++ b/src/app/pages/state/state.component.html
@@ -49,16 +49,16 @@
                 {{ _authService.additionalInformation.numeroCuenta }}
             </div>
 
-            <div class="md:col-span-5 flex flex-col gap-2">
-                <p-message severity="error" size="large">
-                                <span class="ml-2 mr-2">
-                                            <b>Atención:</b> Si su cuenta bancaria es incorrecta actualice
-                    <p-button (onClick)="linkToEEA()" label="Aquí" [rounded]="true" class="m-4" severity="danger"
-                              [raised]="true">
-                        </p-button>
-                                        </span>
-                </p-message>
-            </div>
+<!--            <div class="md:col-span-5 flex flex-col gap-2">-->
+<!--                <p-message severity="error" size="large">-->
+<!--                                <span class="ml-2 mr-2">-->
+<!--                                            <b>Atención:</b> Si su cuenta bancaria es incorrecta actualice-->
+<!--                    <p-button (onClick)="linkToEEA()" label="Aquí" [rounded]="true" class="m-4" severity="danger"-->
+<!--                              [raised]="true">-->
+<!--                        </p-button>-->
+<!--                                        </span>-->
+<!--                </p-message>-->
+<!--            </div>-->
         </div>
     </div>
 
